# poli-math

./: Cargo.toml  LICENSE  readme.md
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/bytemuck/: all.html  derive.AnyBitPattern.html  derive.ByteEq.html  derive.ByteHash.html  derive.CheckedBitPattern.html  derive.Contiguous.html  derive.NoUninit.html  derive.Pod.html  derive.TransparentWrapper.html  derive.Zeroable.html  enum.PodCastError.html  fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.fill_zeroes.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_align_to.html  fn.pod_align_to_mut.html  fn.pod_read_unaligned.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  fn.try_pod_read_unaligned.html  fn.write_zeroes.html  index.html  macro.offset_of.html  trait.AnyBitPattern.html  trait.Contiguous.html  trait.NoUninit.html  trait.Pod.html  trait.PodInOption.html  (+3 more)
docs/bytemuck_derive/: all.html  derive.AnyBitPattern.html  derive.ByteEq.html  derive.ByteHash.html  derive.CheckedBitPattern.html  derive.Contiguous.html  derive.NoUninit.html  derive.Pod.html  derive.TransparentWrapper.html  derive.Zeroable.html  index.html
docs/impl_ops/: all.html  index.html  macro.impl_op!.html  macro.impl_op.html  macro.impl_op_commutative!.html  (+6 more)
src/: color.rs  euler.rs  lib.rs  matrix3.rs  matrix4.rs  quaternion.rs  vector3.rs
(+433 files in other folders)
