[package]
name = "poli-math"
version = "0.1.0"
authors = ["Zach Nguyen <zach@zachnguyen.com>"]
edition = "2021"
description = "3D graphics math library written in Rust."

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
impl_ops = "0.1.1"

[dev-dependencies]
assert_float_eq = "1.1.4"
